--- a/src/main/resources/tabs/tabs.fxml
+++ b/src/main/resources/tabs/tabs.fxml
@@ -8,7 +8,7 @@
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10"
           styleClass="root">
     <fx:define>
-        <fx:include source="../sample/sample.fxml" fx:id="sampleContent" />
+        <fx:include source="../../java/sample/sample.fxml" fx:id="sampleContent" />
         <fx:include source="../threedee/three.fxml" fx:id="threedeeContent" />
     </fx:define>
 
