--- a/src/main/resources/widgets/handDashboard/handDashboard.fxml
+++ b/src/main/resources/widgets/handDashboard/handDashboard.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import widgets.handDashboard.PawControl?>
-<fx:root type="javafx.scene.layout.HBox"
+<fx:root type="javafx.scene.layout.VBox"
           xmlns:fx="http://javafx.com/fxml">
     <PawControl fx:id="paw"></PawControl>
     <VBox>
@@ -16,6 +16,13 @@
             <Label text="Pinch: "></Label>
             <ProgressIndicator fx:id="pinchIndicator"></ProgressIndicator>
         </HBox>
+        <HBox>
+            <Label text="Confi: "></Label>
+            <ProgressIndicator fx:id="confidenceIndicator"></ProgressIndicator>
+        </HBox>
+        <HBox>
+            <Label text="Roll: "></Label>
+            <ProgressIndicator fx:id="rollAngle"></ProgressIndicator>
+        </HBox>
     </VBox>
-    <ImageView fx:id="handGestureView"></ImageView>
 </fx:root>
